--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ th {
 .wholeBox .hanging {
   float: left;
   background: rgb(12, 212, 22);
-  width: 49.5%;
-  height: 50%;
+  width: 100%;
+  height: 40%;
   border: 1px solid #999;
   /* margin-top: 10px; */
   /* margin-left: 15%; */
@@ -34,20 +34,30 @@ th {
 
 .wholeBox .word {
   background: #fff;
-  width: 49.5%;
+  width: 100%;
   height: 20%;
   border: 1px solid #999;
   /* display: inline-block; */
   /* margin-top: 10px; */
   /* margin-left: 0.5%; */
-  float: right;
+  float: left;
 }
 
 .wholeBox .word .correct {
-  background: #fff;
-  width: 100%;
-  height: 70%;
   background-color: aqua;
+  width: 100%;
+  height: 50%;
+  text-align: center;
+}
+
+.wholeBox .word .correct .info {
+  background-color: aqua;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 50px;
+  width: 100%;
+  height: 30%;
+  text-align: center;
 }
 
 .wholeBox .word .correct .square {
@@ -56,10 +66,10 @@ th {
   font-size: 24px;
   font-weight: bold;
   line-height: 50px;
-  width: 50%;
-  height: 10%;
+  width: 40%;
+  height: 20%;
   margin-top: 80px;
-  margin-left: 25%;
+  margin-left: 5%;
   padding: 0;
   text-align: center;
   display: inline-block;
