--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@ th {
   font-weight: bold;
 }
 
+h1 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+
 .wholeBox {
   background: #fff;
   width: 100%;
